# StudHub

./: CMakeLists.txt  dailybudget.cpp  dailybudget.hpp  eveningbudget.cpp  eveningbudget.hpp  feepaying.cpp  feepaying.hpp  istudyinggroup.hpp  main.cpp  myapp.cpp  myapp.hpp  table.hpp  testing.cpp  uml_class_diagram.drawio
